# calendar-mcp-tutorial

./: .env.example  .gitignore  .vercelignore  API_REFERENCE.md  ARCHITECTURE.md  CALENDAR_SYNC.md  CONTRIBUTING.md  DEVELOPING.md  IMPLEMENTATION_SUMMARY.md  OAUTH_FLOW.md  README.md  calendar_api.py  demo_oauth_flow.py  ics_generator.py  main.py  oauth_handler.py  oauth_manager.py  pyproject.toml  requirements.txt  test_integration.py  test_local.py  test_oauth.py  test_validation.py
api/: mcp.py  requirements.txt
public/: index.html  script.js  style.css
